--- a/Qbitt.ipynb
+++ b/Qbitt.ipynb
@@ -124,7 +124,7 @@
         "            return display(HTML(\"<center><h2 style=\\\"font-family:Trebuchet MS;color:#00b24c;\\\">Config has been changed.</h2><br></center>\"))\n",
         "          else:\n",
         "            !rm -rf /content/sample_data/\n",
-        "            !curl -s https://rclone.org/install.sh | sudo bash\n",
+        "            !wget https://raw.githubusercontent.com/MCSeekeri/ActionRcloneCN/master/rclone 
         "            clear_output(wait=True)\n",
         "            return display(HTML(\"<center><h2 style=\\\"font-family:Trebuchet MS;color:#446785;\\\">Installation has been successfully completed.</h2><br></center>\"))\n",
         "        else:\n",
